--- a/config/training.properties
+++ b/config/training.properties
@@ -1,2 +1,4 @@
 uk.co.aw125.training.DataManager.mongoConnectionString=mongodb\://devops6-66/
 uk.co.aw125.training.DataManager.mongoDbName=training
+
+uk.co.aw125.training.config.check=OK
