--- a/config/training.properties
+++ b/config/training.properties
@@ -2,3 +2,5 @@ uk.co.aw125.training.DataManager.mongoConnectionString=mongodb\://training-mongo
 uk.co.aw125.training.DataManager.mongoDbName=training
 
 uk.co.aw125.training.config.check=OK
+
+uk.co.aw125.training.facebook.app_secret=3d25b25e580f17f1bfaa6e2edce9f078
